# AudioCutter

./: .gitignore  Actions.qml  Buttons1.qml  Buttons2.qml  CMakeLists.txt  Content.qml  Controller.js  Cutter.js  Dialogs.qml  ListMessage.qml  MainContent.qml  MainHeader.qml  MyRadioButton.qml  MySquareButton.qml  MySqureButton.qml  PlayList.qml  Window.qml  appCutter  close.cpp  close.h  filepath.txt  images.qrc  main.cpp  videoedit.cpp  videoedit.h  视频剪辑器开发文档 .docx  视频剪辑器开发文档.docx
icons/: finger1.xcf
视频、文档、ppt/: 视频剪辑器开发文档.docx
